# Agentic-AI

./: .env.template  README.md  pyproject.toml
Agents/: MultiAgent-CodeGen2.ipynb  Ollama-Cloud.ipynb  ReAct.ipynb
CloudModels/: Github.ipynb  GoogleAIStudio.ipynb  Groq.ipynb  HuggingFace.ipynb  Ollama-Cloud.ipynb  Openrouter.ipynb  UnifiedLLM-Test.ipynb  UnifiedLLM.py
Tools/: serpapi.ipynb
